fix: article-details gap

--- a/assets/scss/partials/article.scss
+++ b/assets/scss/partials/article.scss
@@ -165,6 +165,7 @@
             flex-grow: 1;
             padding: 0;
             min-height: var(--image-size);
+            gap: 10px;
         }
 
         .article-title {
